页面头部、用户注销

--- a/src/common/scss/_colors.scss
+++ b/src/common/scss/_colors.scss
@@ -1,5 +1,12 @@
-$bar-bg-color: #3E3D32;
+$primary: #69B3FF;
+$success: #13ce66;
+$warning: #f7ba2a;
+$danger: #ff4949;
+$info: #50bfff;
 
 $font-color: #24292e;
 $bg-color: #f8f8f8;
 $border-color: #d8dce6;
+$hover-color: $primary;
+$bar-bg-color: #3E3D32;
+$bar-font-color: #fff;
