--- a/src/common/scss/main.scss
+++ b/src/common/scss/main.scss
@@ -1,4 +1,5 @@
 @import "colors";
 @import "mixins";
+@import "element-ui";
 @import 'layout';
 @import url("http://at.alicdn.com/t/font_441039_h1xss3pau1sjor.css");
