--- a/src/common/scss/main.scss
+++ b/src/common/scss/main.scss
@@ -1,5 +1,6 @@
 @import "colors";
 @import "mixins";
 @import "element-ui";
+@import 'vue-html5-editor';
 @import 'layout';
-@import url("http://at.alicdn.com/t/font_441039_h1xss3pau1sjor.css");
+@import url("http://at.alicdn.com/t/font_441039_kngphrfkh5nx9a4i.css");
