--- a/src/common/scss/main.scss
+++ b/src/common/scss/main.scss
@@ -2,5 +2,5 @@
 @import "mixins";
 @import "element-ui";
 @import 'vue-html5-editor';
-@import 'layout';
-@import url("http://at.alicdn.com/t/font_441039_kngphrfkh5nx9a4i.css");
+@import 'common';
+@import url("http://at.alicdn.com/t/font_441039_iqic7vlrby.css");
