--- a/src/common/scss/_colors.scss
+++ b/src/common/scss/_colors.scss
@@ -4,9 +4,10 @@ $warning: #f7ba2a;
 $danger: #ff4949;
 $info: #50bfff;
 
+$bg-color: #F8F9FB;
+$bg-color-dark: #eff1f3;
 $font-color: #24292e;
-$bg-color: #f8f8f8;
-$border-color: #d8dce6;
+$border-color: rgba(0,0,0,.25);
 $hover-color: $primary;
-$bar-bg-color: #3E3D32;
-$bar-font-color: #fff;
+$header-bg-color: #3E3D32;
+$header-font-color: #f2f3f4;
